# autocopr

./: .gitattributes  .gitignore  .mega-linter.yml  CODEOWNERS  CONTRIBUTORS.md  COPR.md  DOCS.md  LICENSE  README.md  action.sh  action.yml  autocopr.py  config.yaml  dev-requirements.txt  flake.nix  main.py  pyproject.toml  renovate.json  requirements.txt  setup.sh
.circleci/: config.yml  update-readme.yml
.devcontainer/: all-packages.repo  devcontainer.json  dockerfile
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  cleanup-tags-pr.yml  files-changed.yaml  files-changed.yml  lint-fmt-py.yml  lint-fmt-sh.yml  mega-linter.yml  self-test.yml  update-readme.yml  update-thirdparty-packages.yml  update.yml  zizmor.yml
autocopr/: autocopr.py  cli.py  latestver.py  regexconstants.py  specdata.py  update.py
autocopr/githubapi/: graphql.py  latest.py  rest.py
githubapi/: graphql.py  latest.py  rest.py
scripts/: README.md  copr_build.py  copr_packages.py  copr_project.py  copr_thirdparty_packages.py  copr_update_thirdparty_packages.py  copr_webhook.sh  copr_webhook_update_thirdparty_pkgs.sh  create_readme.py  packages.py  python_create_readme.py
specs/: act-cli.spec  atuin.spec  bottom.spec  chezmoi.spec  cilium-cli.spec  eza.spec  fastly.spec  fish-shell.spec  fish.spec  fnm.spec  ghostty.spec  helix.spec  jj.spec  k9s.spec  kubeswitch.spec  kubie.spec  lazydocker.spec  lazygit.spec  lazyjj.spec  lazynpm.spec  lstr.spec  lua-language-server.spec  mise.spec  msedit.spec  sd.spec  starship.spec  superfile.spec  topgrade.spec  usage.spec  uv.spec  volta.spec  zellij.spec  zenith.spec
