[project]
name = "autocopr"
dependencies = ["requests"]
requires-python = ">= 3.13"

[project.optional-dependencies]
dev = [
  "types-requests", # type stubs for requests
  "ruff", # format/linter
  "mypy", # typechecker
  "pip-tools" # Used to create/update requirements.txt
]

[tool.pip-tools]
generate-hashes = true

# Sort imports with ruff
[tool.ruff.lint]
extend-select = ["I"]
