[project]
name = "autocopr"
version = "0.1.0"
description = "Automatically update COPR entries"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "ruff>=0.15.20",
]

[tool.pyrefly]
project-includes = [ "autocopr", "githubapi" ]
# https://github.com/facebook/pyrefly/commit/97fd78f013374caae0e8f259c62ca5a6505e876d
# fixes the issue with requests - once 1.2.0 comes out I should be able to enable this
# min-severity = "warn"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
