[project]
name = "autocopr"
version = "1.0.0"
description = "Check Github Releases daily for new project versions and updates spec files accordingly for automatic COPR updates."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pyrefly>=1.1.1", # typechecker
    "ruff>=0.15.20", # formatter/linter
]

[tool.uv]
required-version = "==0.11.25"

[tool.pyrefly]
project-includes = [ "autocopr", "githubapi" ]
preset = "strict"
# https://github.com/facebook/pyrefly/commit/97fd78f013374caae0e8f259c62ca5a6505e876d
# fixes the issue with requests - once 1.2.0 comes out I should be able to enable this
# min-severity = "warn"

[tool.ruff.lint]
# I got this list of popular rules from https://docs.astral.sh/ruff/linter/#rule-selection
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
